name:                site
version:             0.1.0.0
synopsis:            Static site for reiddraper.cm
homepage:            http://reiddraper.com
license:             AllRightsReserved
author:              Reid Draper
maintainer:          reiddraper@gmail.com
category:            Web
build-type:          Simple
cabal-version:       2.0

executable site
  main-is:             site.hs
  Ghc-options:         -Wall -threaded
  build-depends:       base >=4.5.0,
                       MissingH >=1.6,
                       hakyll >=4.15,
                       clay >=0.14
